Css de la page moviesurl

--- a/src/css/moviesFiltrer.css
+++ b/src/css/moviesFiltrer.css
@@ -5,7 +5,7 @@
 }
 
 .button {
-    background-color: #008CBA; /* Green */
+    background-color: #008CBA; /* Blue */
     border: none;
     color: white;
     padding: 15px 32px;
