--- a/src/css/moviesurl.css
+++ b/src/css/moviesurl.css
@@ -1,3 +1,14 @@
 .btn-spe {
-    
+    display: flex;
+    justify-content: center;
+    background-color: #008CBA; /* Blue */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
