--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,24 @@
   color: #61dafb;
 }
 
+switch {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #007fff ;
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+switch:hover {
+  background-color: #318ce7;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
